Downloads/project_fl-a/test/parser/bad/a_bad_elif.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

elif:
    print("elif_OK")

print("after_elif_OK")